--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" >
 </head>
 <body>
-    
-    {% include 'accounts/navbar.html' %}
+    {% inckude 'accounts/navbar.html' %}
+    <div class="container-fluid">
     {% block content %}
 
     {% endblock %}
+    </div>
     <hr>
     <h5>Footer</h5>
 </body>
