--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" >
 </head>
 <body>
-    {% inckude 'accounts/navbar.html' %}
+    {% include 'accounts/navbar.html' %}
     <div class="container-fluid">
     {% block content %}
 
