--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -11,9 +11,15 @@
 				<tr>
 					<th></th>
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
 				</tr>
-
+                {% for customer in customer %}
+				    <tr>
+						<td></td>
+						<td>{{customer.name}}</td>
+						<td>{{customer.phone}}</td>
+					</tr>
+				{% endfor %}
 			</table>
 		</div>
 	</div>
@@ -31,7 +37,17 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
-		
+		        {% for order in orders %}
+				    <tr>
+						<td></td>
+						<td>{{order.product}}</td>
+						<td>{{order.date_received}}</td>
+						<td>{{order.status}}</td>
+						<td><a href="">Update</a></td>
+						<td><a href="">Delete</a></td>
+					</tr>
+				{% endfor %}
+					
 			</table>
 		</div>
 	</div>
