--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -15,7 +15,7 @@
 				</tr>
                 {% for customer in customer %}
 				    <tr>
-						<td></td>
+						<td><a class="btn btn-sm  btn-info" href="{% url 'customer' customer.id %}">View</a></td>
 						<td>{{customer.name}}</td>
 						<td>{{customer.phone}}</td>
 					</tr>
@@ -43,8 +43,8 @@
 						<td>{{order.product}}</td>
 						<td>{{order.date_received}}</td>
 						<td>{{order.status}}</td>
-						<td><a href="">Update</a></td>
-						<td><a href="">Delete</a></td>
+						<td><a class="btn btn-sm  btn-info" href="">Update</a></td>
+						<td><a class="btn btn-sm  btn-danger" href="">Delete</a></td>
 					</tr>
 				{% endfor %}
 					
