--- a/accounts/templates/accounts/delete.html
+++ b/accounts/templates/accounts/delete.html
@@ -10,9 +10,9 @@
 
 			<p>Are you sure you want to delete "{{item}}"?</p>
 
-			<form  method="POST">
+			<form  action="{% url 'delete_order' item.id %}"method="POST">
 				
-				
+				{% csrf_token %}
 				<a class="btn btn-warning" href="{% url 'home' %}">Cancel</a>
 
 				<input class="btn btn-danger" type="submit" name="Confirm">
