--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,4 +1,13 @@
 {% load static %}
+
+<style>
+  #hello-msg{
+    font-size:18px;
+    color:#fff;
+    margin-right: 20px;;
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <img src="{% static 'images/p1.PNG' %}">
     
@@ -7,6 +16,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        {% if request.user.is_staff %}
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
         </li>
@@ -15,6 +25,9 @@
         </li>
         <li class="nav-item">
         </li>
+        {% endif %}
       </ul>
     </div>
+    <span id="hello-msg">Hello, {{ request.user }}</span>
+    <span><a id="hello-msg" href="{% url 'logout' %}"Logout</span>
   </nav>
